[package]
name = "header2svd"
description = ""
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
repository = "https://github.com/MabezDev/idf2svd"
edition = "2018"
categories = []
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
regex = "1.3.6"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
svd-parser = { git = "https://github.com/rust-embedded/svd.git", branch = "build", features = ["unproven"] }
xmltree = "0.10.0"
