[package]
name = "header2svd"
description = "A tool for generating SVD files for the ESP32 and ESP8266"
version = "0.2.0"
authors = [
    "Scott Mabin <scott@mabez.dev>",
    "Robin Appelman <robin@icewind.nl>",
    "Jesse Braham <jesse@beta7.io",
]
repository = "https://github.com/MabezDev/idf2svd"
edition = "2018"
categories = [
    "command-line-utilities",
    "embedded",
    "hardware-support",
]
keywords = [
    "embedded",
    "esp32",
    "esp8266",
    "svd",
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
regex = "1.3.6"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
svd-parser = { git = "https://github.com/rust-embedded/svd.git", branch = "build", features = ["unproven"] }
xmltree = "0.10.0"
