[package]
name = "header2svd"
description = "A tool for generating SVD files for the ESP32 and ESP8266"
version = "0.2.0"
authors = [
    "Scott Mabin <scott@mabez.dev>",
    "Robin Appelman <robin@icewind.nl>",
    "Jesse Braham <jesse@beta7.io",
]
repository = "https://github.com/MabezDev/idf2svd"
edition = "2018"
categories = [
    "command-line-utilities",
    "embedded",
    "hardware-support",
]
keywords = [
    "embedded",
    "esp32",
    "esp8266",
    "svd",
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
regex = "1.4.6"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
svd-parser = "0.10.1"
xmltree = "0.10.3"
